data/derived/comb/progs/unify/prog4705.ml.out
Characters 160-180:
  helper (seen',rest') 
  ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type unit
